[gd_scene load_steps=9 format=3 uid="uid://bdxdpxlqevbp0"]

[ext_resource type="Texture2D" uid="uid://dbxoahm3orouj" path="res://Solaria Palette.png" id="1_h83ib"]
[ext_resource type="Script" path="res://scripts/MapMovement.gd" id="2_217ej"]
[ext_resource type="PackedScene" uid="uid://ck7f5rqd1qp61" path="res://scenes/item_select.tscn" id="3_fl5lm"]
[ext_resource type="Script" path="res://scripts/Editor_Object.gd" id="4_x32fj"]
[ext_resource type="Script" path="res://scripts/Grid.gd" id="5_y8gh1"]
[ext_resource type="Script" path="res://scenes/SaverLoader.gd" id="6_3uk2k"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rhqcy"]
texture = ExtResource("1_h83ib")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0

[sub_resource type="TileSet" id="TileSet_wcha5"]
sources/3 = SubResource("TileSetAtlasSource_rhqcy")

[node name="main" type="Node2D"]

[node name="item_select" parent="." instance=ExtResource("3_fl5lm")]

[node name="Editor_Object" type="Node2D" parent="."]
script = ExtResource("4_x32fj")

[node name="Sprite2D" type="Sprite2D" parent="Editor_Object"]

[node name="World" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="World"]
tile_set = SubResource("TileSet_wcha5")
format = 2
script = ExtResource("2_217ej")

[node name="ColorRect" type="ColorRect" parent="World/TileMap"]
offset_right = 16.0
offset_bottom = 16.0
color = Color(0.921569, 0.121569, 0.0784314, 0.427451)

[node name="cam_container" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="cam_container"]

[node name="Grid" type="Node2D" parent="."]
script = ExtResource("5_y8gh1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="Save_but" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Load_but" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Load"

[node name="Utiliser" type="Node" parent="."]

[node name="SaverLoader" type="Node" parent="Utiliser"]
script = ExtResource("6_3uk2k")

[connection signal="pressed" from="CanvasLayer/MarginContainer/HBoxContainer/Save_but" to="Utiliser/SaverLoader" method="_on_save_but_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/HBoxContainer/Load_but" to="Utiliser/SaverLoader" method="_on_load_but_pressed"]
